v0.1.0    Wed, 15 Mar 2017 06:12:37 +0900
  - Change private method to public method

v0.0.1    Wed, 15 Mar 2017 06:01:31 +0900
  - Initial release