@@ -1,2 +1,5 @@
 requires 'DateTime';
 requires 'DateTime::Format::Strptime';
+
+# cpan.theopencloset.net
+requires 'OpenCloset::Common';    # OpenCloset::Constants::Status
