@@ -1,3 +1,6 @@
+  - '반납'상태의 주문서는 order_detail 에서 연장/연체료를 계산
+  - `ignore_status` 옵션 추가
+
 v0.1.0    Wed, 15 Mar 2017 06:12:37 +0900
   - Change private method to public method
 
